infrastructure/system/homer/homer.yaml
apiVersion: v1
kind: Service
metadata:
  name: homer-service
spec:
  selector:
    app: homer
  ports:
    - port: 8080
      protocol: TCP
---
# https://github.com/pascaliske/helm-charts/blob/master/charts/homer/values.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homer
  labels:
    app: homer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: homer
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: homer
    spec:
      containers:
        - name: homer
          image: b4bz/homer:latest
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          volumeMounts:
            - name: config-volume
              mountPath: /www/assets
          securityContext:
            runAsNonRoot: true
            # runAsGroup: 1000
            # runAsUser: 1000
          livenessProbe:
            httpGet:
              path: /
              port: http
          readinessProbe:
            httpGet:
              path: /
              port: http
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 256Mi
      volumes:
        - name: config-volume
          configMap:
            name: homer-dashboard
