infrastructure/system/homer/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homer-ingress
  annotations:
    external-dns.kubernetes.io/target: admin.${DOMAIN}
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.middlewares: auth-oauth@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: admin.${DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: homer-service
                port:
                  number: 8080
  tls:
    - secretName: traefik-cert-prod
      hosts:
        - admin.${DOMAIN}
